// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Main Component should match snapshot 1`] = `
<div>
  <[object Object]
    highlightShape={true}
    markup="hi"
    onChange={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": true,
        },
        "math": Object {
          "controlledKeypadMode": false,
          "disabled": true,
          "keypadMode": undefined,
        },
        "video": Object {
          "disabled": true,
        },
      }
    }
  />
</div>
`;

exports[`Render Main Component should match snapshot with teacher instructions 1`] = `
<div>
  <div>
    <Component
      labels={
        Object {
          "hidden": "Show Teacher Instructions",
          "visible": "Hide Teacher Instructions",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Teacher Instructions",
          }
        }
      />
    </Component>
    <br />
  </div>
  <[object Object]
    highlightShape={true}
    markup="hi"
    onChange={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": true,
        },
        "math": Object {
          "controlledKeypadMode": false,
          "disabled": true,
          "keypadMode": undefined,
        },
        "video": Object {
          "disabled": true,
        },
      }
    }
  />
</div>
`;
